--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,10 +1,9 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/typescript-node
 {
-	"name": "CELLO Environment",
-	"build": {
-		"dockerfile": "Dockerfile"
-	},
+	"name": "Polis3 API",
+	"dockerComposeFile": "docker-compose.yml",
+	
 	"extensions": [
 		"JuanBlanco.solidity"
 	],
@@ -12,14 +11,17 @@
 	// "features": {},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	"forwardPorts": [3334]
+	"forwardPorts": [3334],
+	"service": "api",
+  	"workspaceFolder": "/workspace",
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "yarn install",
+	// "postCreateCommand": "yarninstall",
 
 	// Configure tool-specific properties.
 	// "customizations": {},
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
+	"shutdownAction": "stopCompose"
 }
