--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ HOST=0.0.0.0
 NODE_ENV=development
 APP_KEY=nbM67NQAavRPbqjCXO7cFS2vvzm0rhDW
 DRIVE_DISK=local
+CHAIN_PORT=8545
+CHAIN_HOST=http://127.0.0.1
+
