--- a/package.json
+++ b/package.json
@@ -58,8 +58,10 @@
   "dependencies": {
     "@adonisjs/core": "^5.8.0",
     "@adonisjs/repl": "^3.1.0",
+    "@celo/contractkit": "^3.0.1",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "web3": "^1.8.1"
   }
 }
