add a new driver to use nft.storage

--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,4 @@ APP_KEY=nbM67NQAavRPbqjCXO7cFS2vvzm0rhDW
 DRIVE_DISK=local
 CHAIN_PORT=8545
 CHAIN_HOST=http://127.0.0.1
-
+NFTSTORAGE_TOKEN=your-token
