--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -13,7 +13,7 @@
     "Contracts": "contracts"
   },
   "preloads": ["./start/routes", "./start/kernel"],
-  "providers": ["./providers/AppProvider", "@adonisjs/core", "./providers/Polis3Provider"],
+  "providers": ["./providers/AppProvider", "@adonisjs/core", "./providers/Polis3Provider", "./providers/NFTStorageProvider"],
   "aceProviders": ["@adonisjs/repl"],
   "tests": {
     "suites": [
