--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "@adonisjs/core": "^5.8.0",
     "@adonisjs/repl": "^3.1.0",
     "@celo/contractkit": "^3.0.1",
+    "@types/mime": "^3.0.1",
+    "nft.storage": "^7.0.0",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21",
